--- a/glade/appLayout_V1.glade
+++ b/glade/appLayout_V1.glade
@@ -40,7 +40,7 @@
     <property name="title" translatable="yes">Connect Waveform Generator</property>
     <property name="icon-name">printer</property>
     <property name="type-hint">dialog</property>
-    <property name="text" translatable="yes">The function generator was not detected, please connect it and press "Re-Scan" or quite the application.</property>
+    <property name="text" translatable="yes">The function generator was not detected, please connect it and press "Re-Scan" or quit the application.</property>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can-focus">False</property>
@@ -91,10 +91,10 @@
   </object>
   <object class="GtkAdjustment" id="integration_time_adjust">
     <property name="lower">8</property>
-    <property name="upper">10000</property>
+    <property name="upper">600000</property>
     <property name="value">100</property>
-    <property name="step-increment">10</property>
-    <property name="page-increment">100</property>
+    <property name="step-increment">100</property>
+    <property name="page-increment">1000</property>
   </object>
   <object class="GtkAdjustment" id="meas_rep_num">
     <property name="lower">1</property>
@@ -212,6 +212,7 @@
                   <object class="GtkSpinButton" id="measurement_repetitions">
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
+                    <property name="tooltip-text" translatable="yes">How many times should we acquire a spectrum?</property>
                     <property name="text" translatable="yes">1</property>
                     <property name="input-purpose">number</property>
                     <property name="adjustment">meas_rep_num</property>
@@ -382,7 +383,7 @@
                   <object class="GtkSpinButton" id="integration_time">
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
-                    <property name="tooltip-text" translatable="yes">TOOLTIP HERE</property>
+                    <property name="tooltip-text" translatable="yes">How long the spectrometer records data for</property>
                     <property name="margin-start">1</property>
                     <property name="text" translatable="yes">1</property>
                     <property name="input-purpose">number</property>
@@ -520,12 +521,11 @@
             </child>
             <child>
               <object class="GtkButton" id="scan_button">
-                <property name="label" translatable="yes">_Run Scan</property>
+                <property name="label" translatable="yes">Start Scan</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
                 <property name="margin-start">1</property>
-                <property name="use-underline">True</property>
                 <signal name="clicked" handler="scan_button_clicked_cb" swapped="no"/>
               </object>
               <packing>
