Updated app layout to only have three checkboxes for data output -- raw data, PN FFT, and finalized data. The first two are likely only useful for testing, but they might be needed at some point in the future. This also included updating the dataOutputOpts structure to only have three elements.

--- a/glade/appLayout_V1.glade
+++ b/glade/appLayout_V1.glade
@@ -490,8 +490,8 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkCheckButton" id="fft_data_save">
-                    <property name="label" translatable="yes">Save FFT'd Data</property>
+                  <object class="GtkCheckButton" id="pn_fft_data_save">
+                    <property name="label" translatable="yes">Save PN FFT Data</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">False</property>
@@ -501,20 +501,6 @@
                     <property name="expand">False</property>
                     <property name="fill">True</property>
                     <property name="position">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkCheckButton" id="conv_data_save">
-                    <property name="label" translatable="yes">Save Convoluted Data</property>
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="receives-default">False</property>
-                    <property name="draw-indicator">True</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">2</property>
                   </packing>
                 </child>
                 <child>
