--- a/glade/appLayout_V1.glade
+++ b/glade/appLayout_V1.glade
@@ -614,7 +614,7 @@
     <property name="default-height">90</property>
     <property name="icon-name">image-x-generic</property>
     <property name="type-hint">dialog</property>
-    <property name="text" translatable="yes">Please select a spectrometer before running a scan. Make sure they are connect to the computer and powered on.</property>
+    <property name="text" translatable="yes">Please select a spectrometer before running a scan. Make sure they are connected to the computer and powered on.</property>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can-focus">False</property>
