--- a/glade/appLayout_V1.glade
+++ b/glade/appLayout_V1.glade
@@ -122,6 +122,12 @@
     <property name="step-increment">100</property>
     <property name="page-increment">1000</property>
   </object>
+  <object class="GtkAdjustment" id="laser_power_adjust">
+    <property name="lower">10</property>
+    <property name="upper">100</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
+  </object>
   <object class="GtkAdjustment" id="meas_rep_num">
     <property name="lower">1</property>
     <property name="upper">100</property>
@@ -373,7 +379,7 @@
             </child>
             <child>
               <object class="GtkButton" id="spectrometer_scan">
-                <property name="label" translatable="yes">Re-scan for _Spectrometers</property>
+                <property name="label" translatable="yes">Re-scan for Devices</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -415,7 +421,6 @@
                     <property name="text" translatable="yes">1</property>
                     <property name="input-purpose">number</property>
                     <property name="adjustment">integration_time_adjust</property>
-                    <property name="snap-to-ticks">True</property>
                     <property name="numeric">True</property>
                     <property name="value">500</property>
                   </object>
@@ -594,7 +599,57 @@
               </packing>
             </child>
             <child>
-              <placeholder/>
+              <object class="GtkBox">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="label" translatable="yes">Laser Power</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkComboBoxText" id="serial_port_select">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="active">0</property>
+                    <items>
+                      <item translatable="yes">&lt;Select Port&gt;</item>
+                    </items>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSpinButton" id="laser_power">
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="adjustment">laser_power_adjust</property>
+                    <property name="digits">1</property>
+                    <property name="numeric">True</property>
+                    <property name="value">10</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="left-attach">2</property>
+                <property name="top-attach">0</property>
+              </packing>
             </child>
           </object>
           <packing>
@@ -614,7 +669,7 @@
     <property name="default-height">90</property>
     <property name="icon-name">image-x-generic</property>
     <property name="type-hint">dialog</property>
-    <property name="text" translatable="yes">Please select a spectrometer before running a scan. Make sure they are connected to the computer and powered on.</property>
+    <property name="text" translatable="yes">Please select a spectrometer and port for laser control before running a scan. Make sure they are connected to the computer and powered on.</property>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can-focus">False</property>
